k8s/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: python-app
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: nginx
    rules:
      - host: python-app.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: python-app
                  port:
                    number: 80
